# honkai-star-rail-obj-detection

./: README.md
backend/: pyproject.toml
backend/src/: notebook.ipynb
backend/src/dataset/: data.yaml
backend/src/dataset/test/labels/: output_0029_png.rf.8c343ab1c7de6eef267257d3b8c65bed.txt  output_0030_png.rf.5476e9a6175447436d34220aa0e60fc0.txt  output_0043_png.rf.216320ddfb24c1e6117e48b2ff35ec69.txt  output_0082_png.rf.52302575b9beb1c785ee54e11eec5bce.txt  output_0104_png.rf.54706a5893a25a19473c2571b5bea190.txt  output_0105_png.rf.a7af65328c69fac66062dfd86fa7d5d9.txt  output_0109_png.rf.4c9e03240161affc01050d55bcb7243a.txt  output_0137_png.rf.2cf79740f0f49bc66440d7ef4c9f6b7d.txt  output_0138_png.rf.8a4bcb4029792f5e2fe00c7a102e8175.txt  output_0139_png.rf.e4f189af4eebd2fe208d21c530064d5f.txt  output_0141_png.rf.bf832687351b5083eb99138f96a0adf8.txt  output_0144_png.rf.0ec18fb60df5c3791921b85f9fd4492b.txt  output_0170_png.rf.b77444614580bb6e2f5ed0073bfe7838.txt  output_image_0018_jpg.rf.f4ae368b7b7b314601a838555dc3b9f6.txt  output_image_0023_jpg.rf.d6e33dfeb4d551aff36843536c7a741d.txt  output_image_0035_jpg.rf.9cca9a6c1248320362462264d9c9935a.txt  output_image_0036_jpg.rf.ae65544882158c05f3dc34945ce15a41.txt  output_image_0045_jpg.rf.b62e4787bda626322f10b078fdeaf575.txt  output_image_0062_jpg.rf.1d4fe93c5682f87b422f250e0a41d335.txt  output_image_0091_jpg.rf.a01acec94d9e3be89895dbb77c736ed2.txt  output_image_0098_jpg.rf.5cde5791d8b6d12ce9663d9c3ae3a0bb.txt  (+24 more)
backend/src/dataset/train/: labels.cache
backend/src/dataset/valid/: labels.cache
frontend/: Dockerfile  (+5 more)
(+882 files in other folders)
